# nirs4all-aom

./: .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  ONBOARDING.md  README.md  REPRODUCTION.md  pyproject.toml
.github/workflows/: publish-pypi.yml
_archive/: README.md
_archive/aompls_repo_snapshot_from_lab/: .gitignore  ARCHIVED.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md
_archive/deprecated_nirs4all/: aom_pls.py  aom_pls_classifier.py  aom_pls_pytorch.py  pop_pls.py  pop_pls_classifier.py
_archive/multi_lang/AOM_lib/cpp/: CMakeLists.txt
_archive/multi_lang/AOM_lib/cpp/examples/: basic.cpp
_archive/multi_lang/AOM_lib/cpp/include/aompls/: preproc.hpp
_archive/multi_lang/AOM_lib/cpp/src/: c_api.cpp
_archive/multi_lang/AOM_lib/python/: pyproject.toml  setup.py
_archive/multi_lang/AOM_lib/python/examples/: basic.py
_archive/multi_lang/AOM_lib/python/src/aompls/: sklearn.py  tune.py
_archive/multi_lang/AOM_lib/python/tests/: test_parity.py
_archive/nirs4all-lab_benchmark_master/: MASTER_PROVENANCE.md
_archive/pre_paper_drafts/: darts_pls.py  enhanced_aom.py  models.py  moe_pls.py  pseudo_linear_aom.py  pseudo_linear_snv_v1.py  quick_test.py  run_comparison.py  test_snv_jacobian.py  update_models.py  zero_shot_router.py  zero_shot_router_v1.py
aom_nirs/: __init__.py
aom_nirs/fast/: IMPLEMENTATION_NOTES.md  PACKAGE_README.md  __init__.py  bases.py  chain_generator.py  grammar.py  lowrank.py  operator_chain.py  screening.py  xcorr_fast.py
aom_nirs/pls/: __init__.py  banks.py  centering.py  classification.py  estimators.py  metrics.py  nipals.py  operator_similarity.py  operators.py  preprocessing.py  scorers.py  selection.py  simpls.py  torch_backend.py
aom_nirs/ridge/: __init__.py  _spxy.py  aom_ridge_pls.py  auto_selector.py  blender.py  branches.py  classification.py  cv.py  estimators.py  guards.py  kernelizer.py  kernels.py  local_ridge.py  mkl.py  mkr_estimator.py  multi_branch_mkl.py  preprocessing.py  residual_tabpfn.py  selection.py  solvers.py  split_aware_cv.py  tabpfn_candidate.py  weights.py
benchmarks/: README.md
benchmarks/fast/: compare_to_baselines.py  headline_comparison.py  run_fast_aom_benchmark.py
benchmarks/pls/: build_cohorts.py  cohort_classification.csv  cohort_regression.csv  compare_with_tabpfn_master.py  run_aompls_benchmark.py  run_deep_bank_benchmark.py  run_extended_benchmark.py  run_smoke_benchmark.py  run_smoke_cohort.py
benchmarks/ridge/: d_a_001_audit20_paired_stats.py  d_a_001_paired_stats.py  run_aomridge_benchmark.py  run_aomridge_classification.py  summarize_aomridge_results.py
benchmarks/runs/: PAPER_MANIFEST.txt
docs/: _audit_2026-05-17.md  architecture.md  benchmark_protocol.md  math.md  reproducibility.md
examples/: 01_aom_pls_quickstart.py  02_aom_ridge_blender.py  03_fastaom_quickstart.py  README.md  paper_smoke.py
paper/: README.md  arxiv_abstract.txt  arxiv_comments.txt  build.sh  main.tex  references.bib  supplement.tex
paper/repro/: README.md  classification_calibration.py  hpo_recipe_frequency.py  hpo_union_coverage.py  run_all.sh  seed_stability.py  source_family_sensitivity.py  transfer_latency.py
paper/review/: aggregate_ridge_seed_audit.py  aggregate_stats.py  aom_code_inventory.md  aom_lib_migration_plan.md  build_cohort_manifest.py  build_paper_figures.py  classification_stats.md  cohort_manifest.csv  failure_mode_table.csv  final_stats.md  missing_datasets_per_variant.md  operator_frequency.csv  paper_data.py  paper_review.md  pls4all_integration_eval.md  regen_paired_rmsep_scatter.py  ridge_seed_audit.md  selector_diagnostics.csv  selector_diagnostics.py  selector_seed_stability.csv  talanta_review.md  v3_stats.md
paper/scripts/: make_figures.py
paper/tables/: table_aompls_family.tex  table_aomridge_family.tex  table_benchmark_diversity.tex  table_budget.tex  table_classification_full.tex  table_classification_main.tex  table_cohort_manifest.tex  table_dataset_overview_supp.tex  table_dataset_statistics.tex  table_failure_modes.tex  table_fastaom_variants.tex  table_main_results.tex  table_missingness_audit.tex  table_operator_bank.tex  table_operator_diagnostics.tex  table_paired_stats.tex  table_pop_summary.tex  table_ridge_seed_audit.tex  table_seed_stability.tex  table_selector_diagnostics.tex  table_software.tex  table_supplement_long_results.tex  table_time_budget.tex
tests/: README.md  conftest.py
tests/fast/: conftest.py  test_bases.py  test_grammar.py  test_lowrank_screening.py  test_models.py  test_operator_chain.py  test_xcorr_fast.py
tests/pls/: test_active_superblock.py  test_aom_pls_classifier_wrapper.py  test_aom_pls_wrapper.py  test_benchmark_schema.py  test_classification.py  test_estimators.py  test_explorer.py  test_fck_operator.py  test_nipals.py  test_operators.py  test_parity_with_production.py  test_pop_pls_wrapper.py  test_selection.py  test_simpls.py  test_torch_parity.py
tests/ridge/: conftest.py  synthetic_mkr.py  test_auto_selector.py  test_blender.py  test_local_ridge.py  test_mkr_estimator.py  test_mkr_kernelizer.py  test_mkr_no_leakage.py  test_mkr_weights.py  test_multi_branch_mkl.py  test_no_selector_branch_leak.py  test_ridge_branch_global.py  test_ridge_classifier.py  test_ridge_cv_no_leakage.py  test_ridge_estimators.py  test_ridge_kernel_equivalence.py  test_ridge_mkl.py  test_ridge_one_se_and_repeated_cv.py  test_ridge_pls.py  (+4 more)
(+572 files in other folders)
