[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "aompls"
version = "0.1.0"
description = "AOM-PLS compact (PLS1) — C++ core with Python and R bindings"
readme = "../README.md"
license = {text = "CeCILL-2.1"}
requires-python = ">=3.9"
authors = [{name = "nirs4all contributors"}]
dependencies = ["numpy>=1.21", "scikit-learn>=1.0"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
